crates/ruff_python_parser/tests/snapshots/invalid_syntax@simple_stmts_on_same_line_in_block.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/simple_stmts_on_same_line_in_block.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..46,
        body: [
            If(
                StmtIf {
                    node_index: AtomicNodeIndex(..),
                    range: 0..45,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: AtomicNodeIndex(..),
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [
                        Break(
                            StmtBreak {
                                node_index: AtomicNodeIndex(..),
                                range: 9..14,
                            },
                        ),
                        Continue(
                            StmtContinue {
                                node_index: AtomicNodeIndex(..),
                                range: 16..24,
                            },
                        ),
                        Pass(
                            StmtPass {
                                node_index: AtomicNodeIndex(..),
                                range: 25..29,
                            },
                        ),
                        Continue(
                            StmtContinue {
                                node_index: AtomicNodeIndex(..),
                                range: 31..39,
                            },
                        ),
                        Break(
                            StmtBreak {
                                node_index: AtomicNodeIndex(..),
                                range: 40..45,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if True: break; continue pass; continue break
  |                          ^^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | if True: break; continue pass; continue break
  |                                         ^^^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |
